bugfix: allow login/signup pages to overflow

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -29,6 +29,7 @@ p {
 
 #app-container {
     height: 100vh;
+    overflow: auto;
 }
 
 .with-cover {
